tests/paczka1/fuzzy1/60992541.err
Error in line 1: 3y6Z S922 44,4
Error in line 6: z5IGqJaxm S922 11,8
Error in line 14: MeT5 S710 43,5
Error in line 21: MeT5 S922 33,4
Error in line 28: p4FZI S922 59,1
Error in line 25: MeT5 S171 73,7
